--- a/popup.html
+++ b/popup.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>AWS Console Warning Settings</title>
-  <style>
-    body { width: 300px; padding: 10px; }
-    textarea, input[type="text"] { width: 100%; margin-bottom: 10px; }
-    .help-text { font-size: 12px; color: #666; margin-bottom: 10px; }
-  </style>
+  <title>Prod Guard Settings</title>
+  <link rel="stylesheet" type="text/css" href="popup.css">
 </head>
 <body>
-  <h2>Account Numbers to Watch</h2>
-  <div class="help-text">Enter one account number per line. Hyphens are optional.</div>
-  <textarea id="accountNumbers" placeholder="Enter account numbers, one per line"></textarea>
-  <h2>Warning Message</h2>
-  <input type="text" id="warningMessage" placeholder="Enter warning message">
-  <br>
-  <button id="save">Save</button>
+  <div class="container">
+    <h1>Prod Guard Settings</h1>
+    <div class="form-group">
+      <label for="accountNumbers">Account Numbers to Watch:</label>
+      <textarea id="accountNumbers" rows="5" placeholder="Enter one account number per line. Hyphens are optional."></textarea>
+    </div>
+    <div class="form-group">
+      <label for="warningMessage">Warning Message:</label>
+      <input type="text" id="warningMessage" placeholder="Enter warning message">
+    </div>
+    <button id="save" class="btn-save">Save</button>
+  </div>
   <script src="popup.js"></script>
 </body>
 </html>
